--- a/Health_Card/src/components/Footer.css
+++ b/Health_Card/src/components/Footer.css
@@ -42,7 +42,7 @@
 
 .copyright-text {
   font-size: 14px;
-  color: black;
+  color: var(--color3);
   text-align: center;
   position: absolute; /* Garante que o copyright fique centralizado */
   bottom: 10px; /* Ajusta o texto para ficar no final */
