--- a/Health_Card/src/components/Header.css
+++ b/Health_Card/src/components/Header.css
@@ -12,23 +12,58 @@ header {
   padding: 0 79px;
 }
 
+/* Logo */
+
 .header--logo img {
   width: 54px;
   height: 38px;
 }
 
-.div--buttons button {
+/* Navigation */
+
+.div--buttons{
+  display: flex;
+}
+
+.div--buttons > li{
+  margin: 10px;
+  list-style: none;
+  align-content:center;
+}
+
+.div--buttons > li > button {
   font-size: 14px;
   background-color: transparent;
   width: 110px;
   height: 38px;
   border: none;
-  margin: 5px;
 }
 
+/* Buttons */
+
 #button--login {
-  background-color: #a68ff1;
+  background-color: var(--color1);
+}
+#button--login:hover {
+  background-color: var(--color4);
 }
 #button--signup {
-  background-color: #ddfff9;
+  background-color: var(--color2);
+}
+#button--signup:hover {
+  background-color: var(--color5);
+}
+
+/* Links */
+
+.header--link{
+  text-decoration: none;
+  color:var(--color3);
+}
+.header--link:hover{
+  color:var(--color1);
+}
+
+button > .header--link:hover{
+  color: var(--color3);
 }
