--- a/Health_Card/src/App.css
+++ b/Health_Card/src/App.css
@@ -9,6 +9,7 @@
 * {
   box-sizing: border-box;
   font-family: Arial, sans-serif;
+  color: var(--color3);
 }
 
 body {
@@ -141,4 +142,23 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+}
+
+.pageGrid{
+  display: flex;
+  flex-direction: row;
+}
+
+.buttonPurple{
+  font-size: 14px;
+  color: white;
+  background-color: transparent;
+  min-width: 110px;
+  height: 38px;
+  border: none;
+  background-color: var(--color1);
+}
+
+.buttonPurple:hover {
+  background-color: var(--color4);
 }
