--- a/Health_Card/src/components/Medicines.module.css
+++ b/Health_Card/src/components/Medicines.module.css
@@ -3,6 +3,9 @@
     display: flex;
     justify-content: center;
     padding: 20px;
+    font-size: small;
+    line-height:0;
+
   }
   
   .content {
@@ -10,10 +13,12 @@
     width: 80%;
     max-width: 1200px;
     gap: 20px;
+
   }
   
   .title {
     text-align: center;
+    color: var(--color3);
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 20px;
@@ -29,7 +34,8 @@
     background-color: #ccffcc;
     padding: 15px;
     margin-bottom: 10px;
-    border-radius: 8px;
+    border-radius: 1px;
+    width: 50vh;
   }
   
   .recordItem:nth-child(even) {
@@ -39,7 +45,6 @@
   .formContainer {
     flex: 1;
     padding-left: 20px;
-    margin-top:150px;
   }
   
   .formGroup {
@@ -56,17 +61,23 @@
   .formGroup input,
   .formGroup select {
     padding: 8px;
-    font-size: 16px;
+    font-size: small;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 1px;
   }
   
+  .formLine{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+  }
+
   .submitButton {
     background-color: #b599ff;
     color: white;
     padding: 10px;
     border: none;
-    border-radius: 4px;
+    border-radius: 1px;
     cursor: pointer;
     font-size: 16px;
   }
