feat: added images and provisory logo

--- a/front-end/src/components/Header.css
+++ b/front-end/src/components/Header.css
@@ -15,8 +15,8 @@ header {
 /* Logo */
 
 .header--logo img {
-  width: 54px;
-  height: 38px;
+  object-fit: contain;
+  height: 60px;
 }
 
 /* Navigation */
