--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -35,6 +35,11 @@ body {
   background-color: #00000099;
   width: 100%;
   height: 560px;
+  
+  background-image: url('./assets/hero_vlada-karpovich.jpg'), url('./assets/ruido.png');
+  background-position: center,center; 
+  background-repeat: no-repeat, repeat;
+  background-size: cover, auto;
 }
 
 .div--banner h1 {
@@ -105,6 +110,10 @@ body {
   height: 392px;
   margin: 0 auto;
   /* Centraliza cada item */
+}
+
+.itemImage{
+ object-fit: cover;
 }
 
 .item img {
