--- a/front-end/src/components/Vaccines/Vaccines.module.css
+++ b/front-end/src/components/Vaccines/Vaccines.module.css
@@ -1,5 +1,3 @@
-/* Medicines.jsx */
-
 .container {
     display: flex;
     justify-content: center;
@@ -7,7 +5,6 @@
     font-size: small;
     line-height:0;
     box-sizing: content-box;
-
   }
   
   .content {
@@ -127,4 +124,25 @@
   border-radius: 1px;
   cursor: pointer;
   font-size: 16px;
+  min-width: 70px;
+}
+
+.deleteContainer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.deleteContainer h2{
+  text-align: center;
+}
+
+.deleteButtons{
+  display: flex;
+  justify-content: center;
+}
+.deleteButtons > button {
+  margin: 0 10px;
+}
+.deleteMsg{
+  text-align: center;
 }
