--- a/front-end/src/components/Footer.css
+++ b/front-end/src/components/Footer.css
@@ -2,12 +2,13 @@
   background-color: #ddfff9;
   padding: 30px 4%;
   width: 100%;
-  height: 245px; /* Altura fixa */
+  height: 200px; /* Altura fixa */
   display: flex;
   justify-content: space-between; /* Deixa a imagem à esquerda e as colunas à direita */
   align-items: center; /* Centraliza verticalmente */
   position: relative;
   margin-top: 50px; /* Espaçamento do conteúdo acima */
+  border-radius: 25px 25px 0 0;
 }
 
 .content--info {
