--- a/front-end/src/components/Header.module.css
+++ b/front-end/src/components/Header.module.css
@@ -10,13 +10,14 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 0 79px;
+  border-radius: 0 0 25px 25px;
 }
 
 /* Logo */
 
 .headerLogo img {
   object-fit: contain;
-  height: 60px;
+  height: 80px;
 }
 
 /* Navigation */
@@ -37,6 +38,14 @@ header {
   width: 110px;
   height: 38px;
   border: none;
+  transition: 0.2s ease-in-out;
+  border-radius: 15px;
+  
+}
+
+.divButtons > li > button:hover {
+  width: 130px;
+  
 }
 
 /* Buttons */
@@ -60,13 +69,16 @@ header {
 .headerLink{
   text-decoration: none;
   color:var(--color3);
+  transition: 0.2s ease-in-out;
 }
 .headerLink:hover{
   color:var(--color1);
+  font-size: 18px;
 }
 
 button > .headerLink:hover{
   color: var(--color3);
+  
 }
 
 /* Logout*/
