--- a/front-end/src/components/Login.module.css
+++ b/front-end/src/components/Login.module.css
@@ -17,17 +17,18 @@ button{
     background-color: #a68ff1;
     color: black;
 } */
- 
+
 .content {
     width: 100vw;
-    margin-top: 210px;
+    margin-top: 110px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-    flex-shrink:0;
+    flex-shrink: 0;
     color: var(--color3);
+    margin-bottom: 190px;
 }
 
 
@@ -61,14 +62,13 @@ h1 {
 .inputGroup input {
     width: 300px;
     padding: 10px;
-    border: 0;
     border-bottom: 1px solid #ccc;
     font-size: 14px;
     outline: none;
 }
 
-.inputGroup input:active, input:focus {
-    border: 0;
+.inputGroup input:active,
+input:focus {
     border-bottom: 2px solid #979595;
 
 }
@@ -78,7 +78,7 @@ h1 {
     padding: 10px;
     background-color: var(--color1);
     border: none;
-    border-radius: 1px;
+    border-radius: 15px;
     color: white;
     font-size: 16px;
     cursor: pointer;
@@ -102,7 +102,7 @@ h1 {
     text-decoration: underline;
 }
 
-.btnGoogle {
+/* .btnGoogle {
     width: 100%;
     padding: 10px;
     background-color: var(--color2);
@@ -115,7 +115,7 @@ h1 {
 
 .btnGoogle:hover {
     background-color: var(--color5);
-}
+} */
 
 .signup {
     margin-top: 20px;
@@ -131,12 +131,12 @@ h1 {
     text-decoration: underline;
 }
 
-.loginError{
+.loginError {
     color: red;
     font-size: 12px;
 }
 
-.loginSuccess{
+.loginSuccess {
     color: green;
     font-size: 12px;
 }
