--- a/front-end/src/components/Footer.module.css
+++ b/front-end/src/components/Footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #ddfff9;
+  background-color: var(--color6);
   padding: 30px 4%;
   width: 100%;
   height: 130px; /* Altura fixa */
@@ -9,9 +9,10 @@
   position: relative;
   margin-top: 50px; /* Espaçamento do conteúdo acima */
   border-radius: 25px 25px 0 0;
+  border-top: 1px var(--color1);
 }
 
-.content--info {
+.contentInfo {
   display: flex;
   justify-content: flex-end; /* Coloca o conteúdo à direita */
   align-items: center;
@@ -19,7 +20,7 @@
   width: 100%;
 }
 
-.footer--icons {
+.footerIcons {
   display: flex;
   justify-content: flex-start; /* Centraliza o ícone à esquerda */
   align-items: center;
@@ -27,7 +28,7 @@
   height: 70px;
 }
 
-.footer--icons img {
+.footerIcons img {
   width: 200px;
   height: auto;
 }
@@ -41,7 +42,7 @@
   margin: 0;
 }
 
-.copyright-text {
+.copyrightText {
   font-size: 14px;
   color: var(--color3);
   text-align: center;
