--- a/front-end/src/pages/UserPage.module.css
+++ b/front-end/src/pages/UserPage.module.css
@@ -1,14 +1,20 @@
 .page {
-    width: 100%;
-    height: 100%;
-
+    display: grid;
+    min-height: 120vh;
+    grid-template-columns: 1fr;
+    grid-template-rows: 100px auto 245px;
 }
 
 /* .div--menu{
 
 } */
 
-.div--content {
+.userContent{
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+  }
+
+.divContent {
     padding-left: 120px;
     width: 90%;
     display: flex;
@@ -21,7 +27,7 @@
     
 } */
 
-.div--image {
+.divImage {
     padding: 15px;
 }
 
@@ -33,3 +39,4 @@ img {
 .userImage {
     object-fit: cover;
 }
+
