--- a/front-end/src/pages/ContactPage.module.css
+++ b/front-end/src/pages/ContactPage.module.css
@@ -1,53 +1,60 @@
-.page--contact {
+.page{
+  display: grid;
+  min-height: 120vh;
+  grid-template-columns: 1fr;
+  grid-template-rows: 100px auto 245px;
+}
+
+.pageContact {
   width: 60%;
   margin: 0 auto;
   text-align: center;
   padding: 40px 0;
 }
 
-.page--contact h1 {
+.pageContact h1 {
   font-size: 32px;
   color: var(--color3);
   margin-bottom: 20px;
 }
 
-.page--contact p {
+.pageContact p {
   font-size: 18px;
   color: var(--color3);
   margin-bottom: 30px;
 }
 
-.contact-info {
+.contactInfo {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 20px;
   margin: 20px 0;
 }
 
-.contact-item {
+.contactItem {
   background-color: #fff;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.contact-item h3 {
+.contactItem h3 {
   color: var(--color3);
   font-size: 20px;
   margin-bottom: 10px;
 }
 
-.contact-item p {
+.contactItem p {
   font-size: 16px;
   color: var(--color3);
 }
 
-.contact-item a {
+.contactItem a {
   text-decoration: none;
   color: var(--color1);
 }
 
-.contact-item a:hover {
+.contactItem a:hover {
   text-decoration: underline;
 }
 
