--- a/front-end/src/pages/FAQPage.module.css
+++ b/front-end/src/pages/FAQPage.module.css
@@ -1,29 +1,35 @@
-.page--faq {
+.page{
+  display: grid;
+  min-height: 120vh;
+  grid-template-columns: 1fr;
+  grid-template-rows: 100px auto 245px;
+}
+.pageFaq {
   width: 60%;
   margin: 0 auto;
   text-align: center;
   padding: 40px 0;
 }
 
-.page--faq h1 {
+.pageFaq h1 {
   font-size: 32px;
   color: var(--color3);
   margin-bottom: 20px;
 }
 
-.page--faq p {
+.pageFaq p {
   font-size: 18px;
   color: var(--color3);
   margin-bottom: 30px;
 }
 
-.faq-section {
+.faqSection {
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
 
-.faq-item {
+.faqItem {
   background-color: #fff;
   padding: 20px;
   border-radius: 10px;
@@ -31,22 +37,22 @@
   text-align: left;
 }
 
-.faq-item h3 {
+.faqItem h3 {
   font-size: 20px;
   color: var(--color3);
   margin-bottom: 10px;
 }
 
-.faq-item p {
+.faqItem p {
   font-size: 16px;
   color: var(--color3);
 }
 
-.faq-item a {
+.faqItem a {
   text-decoration: none;
   color: var(--color1);
 }
 
-.faq-item a:hover {
+.faqItem a:hover {
   text-decoration: underline;
 }
