--- a/front-end/src/components/Footer.module.css
+++ b/front-end/src/components/Footer.module.css
@@ -34,17 +34,30 @@
 
 .footer ul {
   display: grid;
-  grid-template-columns: repeat(1, auto); /* Colunas */
-  gap: 10px 30px; /* Espaçamento vertical e horizontal */
+  gap: 10px 30px;
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-/* .contentDiv{
+.contentDiv{
+  min-width:120px;
+  line-height: 26px;
+}
+
+.contactIconsDiv{
+  margin-top: 40px;
   display: flex;
-  flex-direction: column;
-} */
+  flex-direction: row;
+  column-gap: 8px;
+}
+
+a{
+  text-decoration: none;
+}
+a:hover{
+  font-size: 18px;
+}
 
 .copyrightText {
   font-size: 14px;
