refactor: design improvements and remotion of global css attributes

--- a/front-end/src/components/Footer.module.css
+++ b/front-end/src/components/Footer.module.css
@@ -52,10 +52,10 @@
   column-gap: 8px;
 }
 
-a{
-  text-decoration: none;
+.link {
+  transition: 0.2s ease;
 }
-a:hover{
+.link:hover {
   font-size: 18px;
 }
 
