--- a/front-end/src/pages/UserPage.module.css
+++ b/front-end/src/pages/UserPage.module.css
@@ -9,34 +9,43 @@
 
 } */
 
-.userContent{
+.userContent {
     display: grid;
     grid-template-columns: 1fr 5fr;
-  }
+}
 
 .divContent {
     padding-left: 120px;
     width: 90%;
     display: flex;
     flex-direction: row;
+    padding-top: 100px;
+    gap: 50px;
     align-items: center;
-    padding-right: 20px;
 }
 
-/* .div--info{
-    
-} */
+.divInfo p {
+    line-height: 1.5;
+    font-size: 1.25rem;
+    text-align: justify;
+}
+
+.divInfo h1 {
+    text-align: left;
+    font-size: 2rem;
+    margin-bottom: 20px;
+}
+
+.salutia {
+    color: var(--color1);
+}
 
 .divImage {
-    padding: 15px;
-}
-
-img {
-    width: 400px;
-    height: 400px;
 }
 
 .userImage {
     object-fit: cover;
+    width: 400px;
+    height: 400px;
+    border-radius: 30px 100px 30px 100px;
 }
-
