refactor: design improvements and css corrections

--- a/front-end/src/components/Login.module.css
+++ b/front-end/src/components/Login.module.css
@@ -46,8 +46,8 @@ button{
 }
 
 .loginTitle {
-    margin-bottom: 20px;
-    font-size: 24px;
+    margin: 50px 0;
+    font-size: 1.5rem;
 }
 
 /* h1 {
