--- a/front-end/src/components/Register.module.css
+++ b/front-end/src/components/Register.module.css
@@ -2,17 +2,18 @@
     flex-shrink: 0;
 
     max-width: 800px;
-    margin: 100px auto;
+    margin: 150px auto 100px auto;
     padding: 20px;
 
-    border-radius: 1px;
+    border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
 }
 
 .registerContainer h1 {
     font-size: 30px;
     font-weight: bold;
     margin-bottom: 40px;
-    padding-bottom: 10px;
+    padding: 10px;
     text-align: left;
     color: #000;
     border-bottom: #ddd 2px solid;
@@ -50,7 +51,7 @@ legend {
     flex: 1;
 }
 
-label {
+.inputGroup div label {
     font-size: 14px;
     font-weight: bold;
     display: block;
@@ -73,6 +74,7 @@ select {
 
 input[type="checkbox"] {
     margin-right: 10px;
+    cursor: pointer;
 }
 
 .btnEnviar {
