--- a/front-end/src/pages/UserPage.module.css
+++ b/front-end/src/pages/UserPage.module.css
@@ -1,6 +1,6 @@
 .page {
     display: grid;
-    min-height: 120vh;
+    min-height: 100vh;
     grid-template-columns: 1fr;
     grid-template-rows: 100px auto 180px;
 }
@@ -19,7 +19,6 @@
     width: 90%;
     display: flex;
     flex-direction: row;
-    padding-top: 100px;
     gap: 50px;
     align-items: center;
 }
@@ -28,6 +27,7 @@
     line-height: 1.5;
     font-size: 1.25rem;
     text-align: justify;
+    max-width: 700px;
 }
 
 .divInfo h1 {
@@ -38,9 +38,6 @@
 
 .salutia {
     color: var(--color1);
-}
-
-.divImage {
 }
 
 .userImage {
