--- a/front-end/src/components/Menu.module.css
+++ b/front-end/src/components/Menu.module.css
@@ -11,7 +11,7 @@
   .menuContainer h2 {
     font-size: 18px;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   }
   
   .menuContainer ul {
@@ -28,6 +28,10 @@
     text-decoration: none;
     color: black;
     font-size: 16px;
+    transition: 0.3s;
+  }
+  .icon {
+    margin-right: 20px;
   }
 
   .menuContainer li a:hover {
