--- a/front-end/src/components/Menu.module.css
+++ b/front-end/src/components/Menu.module.css
@@ -1,47 +1,50 @@
 .menuContainer {
-    /* background-color: #e9ffe9; Cor de fundo semelhante à da imagem */
-    width: 250px;
-    height: 100%;
-    padding: 20px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    border-right: 0.1px solid #e4e4e4;
-    position: fixed;
-  }
-  
-  .menuContainer h2 {
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 20px;
-  }
-  
-  .menuContainer ul {
-    list-style-type: none;
-    padding-left: 0;
-  }
-  
-  .menuContainer li {
-    margin-bottom: 10px;
-    line-height: 2;
-  }
-  
-  .menuContainer li a {
-    text-decoration: none;
-    color: black;
-    font-size: 16px;
-    transition: 0.3s;
-  }
-  .icon {
-    margin-right: 20px;
-  }
+  /* background-color: #e9ffe9; Cor de fundo semelhante à da imagem */
+  width: 250px;
+  height: 100%;
+  padding: 20px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  border-right: 0.1px solid #e4e4e4;
+  position: fixed;
+}
 
-  .menuContainer li a:hover {
-    color: var(--color1);
-    font-size: 16px;
-  }
-  
-  .menuContainer h3 {
-    font-size: 16px;
-    font-weight: bold;
-    margin-top: 20px;
-    color: black;
-  }
+.menuContainer h2 {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.menuContainer ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+.menuContainer li {
+  margin-bottom: 10px;
+  line-height: 2;
+}
+
+.menuContainer li a {
+  text-decoration: none;
+  color: black;
+  font-size: 16px;
+  transition: 0.3s;
+}
+
+.icon {
+  margin-right: 20px;
+}
+
+
+
+.menuContainer li a:hover {
+  color: var(--color1);
+  font-size: 1.125rem;
+}
+
+.menuContainer h3 {
+  font-size: 16px;
+  font-weight: bold;
+  margin-top: 20px;
+  color: black;
+}
