--- a/front-end/src/components/RelatoryPage.module.css
+++ b/front-end/src/components/RelatoryPage.module.css
@@ -12,6 +12,33 @@
 .items {
     padding: 30px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 0 20px;
+}
+
+
+.printButton {
+    background-color: #9b89ff;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 15px;
+    cursor: pointer;
+    font-size: 16px;
+    width: 160px;
+    transition: 0.3s;
+    margin: 50px auto;
+}
+
+.printButton:hover {
+    background-color: #8870e5;
+    width: 200px;
+}
+
+.buttonsWrapper {
+    margin: auto;
+    min-width: 300px;
+    width: 500px;
+    display: flex;
+    justify-content: center;
 }
