--- a/front-end/src/components/Appointments/Appointments.module.css
+++ b/front-end/src/components/Appointments/Appointments.module.css
@@ -92,7 +92,7 @@
 
 .formContainer {
   flex: 1;
-  padding-left: 20px;
+  padding: 0 20px;
 }
 
 .formGroup {
@@ -125,10 +125,16 @@
   color: white;
   padding: 10px;
   border: none;
-  border-radius: 1px;
+  border-radius: 15px;
   cursor: pointer;
   font-size: 16px;
   min-width: 70px;
+  transition: 0.3s;
+}
+
+.submitButton:hover {
+  background-color: var(--color4);
+  min-width: 120px;
 }
 
 .deleteContainer {
@@ -152,4 +158,9 @@
 
 .deleteMsg {
   text-align: center;
+  margin: 20px 0;
+}
+
+.title {
+  margin-bottom: 20px;
 }
