--- a/front-end/src/components/Medicines/Medicines.module.css
+++ b/front-end/src/components/Medicines/Medicines.module.css
@@ -6,7 +6,6 @@
   padding: 20px;
   font-size: small;
   line-height: 0;
-
 }
 
 .content {
@@ -16,7 +15,6 @@
   gap: 20px;
 
 }
-
 
 .records {
   margin-top: 50px;
@@ -95,7 +93,7 @@
 
 .formContainer {
   flex: 1;
-  padding-left: 20px;
+  padding: 0 20px;
 }
 
 .formGroup {
@@ -128,10 +126,16 @@
   color: white;
   padding: 10px;
   border: none;
-  border-radius: 1px;
+  border-radius: 15px;
   cursor: pointer;
   font-size: 16px;
   min-width: 70px;
+  transition: 0.3s;
+}
+
+.submitButton:hover {
+  min-width: 120px;
+  background-color: var(--color4);
 }
 
 .deleteContainer {
@@ -155,4 +159,15 @@
 
 .deleteMsg {
   text-align: center;
+  margin: 20px 0;
+}
+
+/*Add*/
+
+.addTitle {
+  margin-bottom: 20px;
+}
+
+.title {
+  margin-bottom: 20px;
 }
