--- a/front-end/src/components/Symptoms/Symptoms.module.css
+++ b/front-end/src/components/Symptoms/Symptoms.module.css
@@ -85,7 +85,11 @@
 
 .formContainer {
   flex: 1;
-  padding-left: 20px;
+  padding: 0 20px;
+}
+
+.formContainer h2 {
+  margin-bottom: 20px;
 }
 
 .formGroup {
@@ -122,6 +126,14 @@
   cursor: pointer;
   font-size: 16px;
   min-width: 70px;
+
+  border-radius: 15px;
+  transition: 0.3s;
+}
+
+.submitButton:hover {
+  min-width: 120px;
+  background-color: var(--color4);
 }
 
 .deleteContainer {
@@ -145,4 +157,5 @@
 
 .deleteMsg {
   text-align: center;
+  margin: 20px 0;
 }
