--- a/front-end/src/components/Vaccines/Vaccines.module.css
+++ b/front-end/src/components/Vaccines/Vaccines.module.css
@@ -98,7 +98,7 @@
 
 .formContainer {
   flex: 1;
-  padding-left: 20px;
+  padding: 0 20px;
 }
 
 .formGroup {
@@ -131,10 +131,16 @@
   color: white;
   padding: 10px;
   border: none;
-  border-radius: 1px;
+  border-radius: 15px;
   cursor: pointer;
   font-size: 16px;
   min-width: 70px;
+  transition: 0.3s;
+}
+
+.submitButton:hover {
+  min-width: 120px;
+  background-color: var(--color4);
 }
 
 .deleteContainer {
@@ -158,4 +164,15 @@
 
 .deleteMsg {
   text-align: center;
+  margin: 20px 0;
 }
+
+.addTitle {
+  margin-bottom: 20px;
+}
+
+.title {
+  margin-bottom: 20px;
+}
+
+
