--- a/front-end/src/pages/AboutPage.module.css
+++ b/front-end/src/pages/AboutPage.module.css
@@ -10,12 +10,11 @@ body {
   color: var(--color3);
 }
 
-
 .pageAbout {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 100px;
+  margin-top: 150px;
 }
 
 .pageAbout h1 {
@@ -86,7 +85,7 @@ body {
   border-radius: 20px;
   padding: 15px 30px;
   cursor: pointer;
-  transition: background-color 0.3s;
+  transition: 0.3s;
 }
 
 .pageAbout .cta button:hover {
