feat: menu toggle

--- a/front-end/src/components/Header.module.css
+++ b/front-end/src/components/Header.module.css
@@ -78,15 +78,12 @@ header {
 
 button > .headerLink:hover{
   color: var(--color3);
-  
 }
 
 /* Logout*/
 
 .buttonLogout{
   width: 20px;
-  border: 1px solid black;
-  background-color: yellow;
 
 }
 [data-tooltip] {
@@ -112,4 +109,84 @@ button > .headerLink:hover{
 
 .icon {
   margin-left: 10px;
+}
+
+.toggleLink{
+  display: none;
+  font-size: 0;
+}
+
+.menuToggle{
+  top: 30px;
+  left: 10px;
+  z-index: 100000;
+  background: none;
+  border: none;
+  color: var(--color4);
+  font-size: 20px;
+  cursor: pointer;
+  position: absolute;            
+  display: none;
+}
+
+@media only screen and (max-width: 767px) {
+
+  .menuToggle, .toggleLink {
+      display: block;
+  }
+  .menuToggle:hover{
+    color: var(--color2);
+  }
+  nav {
+      display: none;
+  }
+  nav.active {
+    display: block;
+  }
+  header{
+    flex-direction: column;
+  }
+  .headerLogo{
+    margin-top: 10px;
+  }
+  .divButtons{
+    flex-direction: column;
+    margin-left: 10px;
+    padding-bottom: 25px;
+    align-items: left;
+    width: 100vw;
+    background: var(--color6);
+    border-radius: 0 0 25px 25px;
+  }
+  .divButtons > li{
+    margin:0;
+  }
+  .headerLink{
+    width: 100vw;
+    margin: 0 0 0 10px;
+  }
+  .headerLink:hover{
+    color:var(--color3);
+    background-color:var(--color1);
+  }
+  .divButtons > li > button{
+    text-align: left;
+    width: 200px;
+  }
+  .divButtons > li > button:hover{
+    text-align: left;
+    width: 100%;
+    border-radius: 0;
+    background-color:var(--color1);
+  }
+  #buttonPurple, #buttonGreen {
+    padding-left: 10px;
+    border:none;
+    width: 100%;
+    background-color: var(--color6);
+    text-align: left;
+  }
+  #buttonPurple:hover, #buttonGreen:hover{
+    background-color:var(--color1);
+  }
 }
