--- a/front-end/src/pages/UserPage.module.css
+++ b/front-end/src/pages/UserPage.module.css
@@ -46,3 +46,40 @@
     height: 400px;
     border-radius: 30px 100px 30px 100px;
 }
+
+@media (max-width: 769px) {
+    .divInfo p{
+        font-size: 12px;
+    }
+  
+    .divInfo h1 {
+      font-size: 18px;
+    }
+
+    .userImage {
+        width: 150px;
+        height: 300px;
+        border-radius: 10px 20px;
+        display: none;
+    }
+
+    .divContent {
+        padding-top: 10px;
+        padding-left: 10px;
+        flex-direction: row;
+        width: 100vh;
+    }
+  }
+  
+  @media (max-width: 1024px) {
+    .userImage {
+        width: 150px;
+        height: 300px;
+        border-radius: 10px 20px;
+    }
+    .divContent {
+        padding-top: 10px;
+        padding-left: 130px;
+        width: 80vh;
+    }
+  }
