--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -205,3 +205,25 @@ a {
 }
 
 
+
+@media only screen and (max-width: 880px){
+  .pageContent{
+    width: 50%;
+  }
+}
+@media only screen and (max-width: 767px){
+  .pageContent{
+    width: 90%;
+  }
+}
+@media only screen and (max-width: 767px){
+  .pageGrid{
+    grid-template-columns: 1fr;
+  }
+  .sendButton{
+    margin: 0;
+  }
+  .buttonPurple{
+    width: 300px;
+  }
+}
